Move MathPlan logic to DB package, update MPL batch.