@@ -59,7 +59,7 @@ public final class CourseSequence {
      *
      * @param theCore the core course group
      */
-    public CourseSequence(final CourseGroup theCore) {
+    CourseSequence(final CourseGroup theCore) {
 
         this.core = theCore;
 
@@ -77,7 +77,7 @@ public final class CourseSequence {
     /**
      * Eliminates any duplicate courses or course groups, keeping only the earliest instance.
      */
-    public void eliminateDuplicates() {
+    void eliminateDuplicates() {
 
         this.additionalCourseGroups.removeAll(this.semester2CourseGroups);
         this.additionalCourseGroups.removeAll(this.semester1CourseGroups);
@@ -110,7 +110,7 @@ public final class CourseSequence {
      *
      * @param allCourses the map from course ID to course data object for all courses
      */
-    public void convertOneCourseGroups(final Map<String, RawCourse> allCourses) {
+    void convertOneCourseGroups(final Map<String, RawCourse> allCourses) {
 
         extractOneCourseGroups(this.semester1CourseGroups, this.semester1Courses, allCourses);
         extractOneCourseGroups(this.semester2CourseGroups, this.semester2Courses, allCourses);
@@ -136,7 +136,8 @@ public final class CourseSequence {
             if (courses.size() == 1) {
                 iterator.remove();
 
-                final RawCourse course = allCourses.get(courses.get(0));
+                final String first = courses.getFirst();
+                final RawCourse course = allCourses.get(first);
                 if (course != null) {
                     final CourseInfo info = new CourseInfo(course, false);
                     courseSet.put(course.course, info);
@@ -210,12 +211,14 @@ public final class CourseSequence {
 
                 final int courseCredits = info.course.nbrCredits.intValue();
 
-                if (courseCredits >= numCredits.intValue()) {
+                final int count = numCredits.intValue();
+
+                if (courseCredits >= count) {
                     groupSatisfied = true;
                     break;
                 }
 
-                numCredits = Integer.valueOf(numCredits.intValue() - courseCredits);
+                numCredits = Integer.valueOf(count - courseCredits);
 
                 group.setCourseGroup(new CourseGroup(courseGroup.groupCode, numCredits,
                         courseGroup.lowestLastCourse, courseGroup.courseNumbers));
@@ -231,7 +234,7 @@ public final class CourseSequence {
      *
      * @param allCourses a map from course ID to course data; used to get number of credits for each course
      */
-    public void cleanNeedlessGroups(final Map<String, RawCourse> allCourses) {
+    void cleanNeedlessGroups(final Map<String, RawCourse> allCourses) {
 
         final Map<String, CourseInfo> priorAndCurrent = new TreeMap<>();
 
@@ -262,7 +265,7 @@ public final class CourseSequence {
      *
      * @param allCourses a map from course ID to course record
      */
-    public void mergeNoCreditForBothCourses(final Map<String, RawCourse> allCourses) {
+    void mergeNoCreditForBothCourses(final Map<String, RawCourse> allCourses) {
 
         final Collection<String> all = new HashSet<>(this.preArrivalCourses.keySet());
         all.addAll(this.semester1Courses.keySet());
@@ -583,25 +586,6 @@ public final class CourseSequence {
         checkAdditionalPrerequisites(prereqData, courseData, data);
     }
 
-    ///**
-    // * Fills in any missing prerequisite courses for pre-arrival (this may only add courses to
-    // * pre-arrival).
-    // *
-    // * @param prereqData a map from course ID to its required prerequisites
-    // * @param courseData a map from course ID to course data
-    // * @param data the student data with past word on record
-    // */
-    // private void checkPreArrivalPrerequisites(final Map<String, List<RequiredPrereq>>
-    // prereqData,
-    // final Map<String, Course> courseData, final StudentData data) {
-    //
-    // // Courses only... (loop over a copy since the course list may be altered within loop)
-    // final Map<String, CourseInfo> copy = new HashMap<>(this.preArrivalCourses);
-    // for (final String course : copy.keySet()) {
-    // checkSinglePreArrivalPrerequisite(course, prereqData, courseData, data);
-    // }
-    // }
-
     /**
      * Checks a single course in the pre-arrival category. If the course's prerequisites are not present they are added,
      * and this method is called recursively to add any prerequisites for the newly added course.
@@ -613,19 +597,18 @@ public final class CourseSequence {
      */
     private void checkSinglePreArrivalPrerequisite(final String course,
                                                    final Map<String, ? extends List<RequiredPrereq>> prereqData,
-                                                   final Map<String, RawCourse> courseData,
-                                                   final StudentData data) {
+                                                   final Map<String, RawCourse> courseData, final StudentData data) {
 
         final List<RequiredPrereq> prereqList = prereqData.get(course);
         if (prereqList != null) {
             for (final RequiredPrereq prereq : prereqList) {
                 if (!isPrereqMet(prereq, this.preArrivalCourses, this.preArrivalCourses, null, null, false)) {
-                    final String courseToAdd = prereq.prereqCourses.get(0);
+                    final String courseToAdd = prereq.prereqCourses.getFirst();
 
                     final RawCourse crs = courseData.get(courseToAdd);
                     if (crs != null) {
                         final CourseInfo info = new CourseInfo(crs, true);
-                        info.requiredGrade = prereq.prereqGrades.isEmpty() ? null : prereq.prereqGrades.get(0);
+                        info.requiredGrade = prereq.prereqGrades.isEmpty() ? null : prereq.prereqGrades.getFirst();
                         info.status = isAlreadySatisfied(info, data);
 
                         this.preArrivalCourses.put(courseToAdd, info);
@@ -647,21 +630,19 @@ public final class CourseSequence {
      */
     private void checkSingleSem1Prerequisite(final String course,
                                              final Map<String, ? extends List<RequiredPrereq>> prereqData,
-                                             final Map<String, RawCourse> courseData,
-                                             final StudentData data) {
+                                             final Map<String, RawCourse> courseData, final StudentData data) {
 
         final List<RequiredPrereq> prereqList = prereqData.get(course);
         if (prereqList != null) {
             for (final RequiredPrereq prereq : prereqList) {
                 if (!isPrereqMet(prereq, this.semester1Courses, this.preArrivalCourses, this.semester1CourseGroups,
-                        null,
-                        false)) {
-                    final String courseToAdd = prereq.prereqCourses.get(0);
+                        null, false)) {
+                    final String courseToAdd = prereq.prereqCourses.getFirst();
                     final RawCourse crs = courseData.get(courseToAdd);
 
                     if (crs != null) {
                         final CourseInfo info = new CourseInfo(crs, true);
-                        info.requiredGrade = prereq.prereqGrades.isEmpty() ? null : prereq.prereqGrades.get(0);
+                        info.requiredGrade = prereq.prereqGrades.isEmpty() ? null : prereq.prereqGrades.getFirst();
                         info.status = isAlreadySatisfied(info, data);
 
                         if (Boolean.TRUE.equals(prereq.mayBeConcurrent)) {
@@ -688,8 +669,7 @@ public final class CourseSequence {
      */
     private void checkSingleSem2Prerequisite(final String course,
                                              final Map<String, ? extends List<RequiredPrereq>> prereqData,
-                                             final Map<String, RawCourse> courseData,
-                                             final StudentData data) {
+                                             final Map<String, RawCourse> courseData, final StudentData data) {
 
         final Map<String, CourseInfo> prior = new HashMap<>(this.semester1Courses);
         prior.putAll(this.preArrivalCourses);
@@ -698,14 +678,13 @@ public final class CourseSequence {
         if (prereqList != null) {
             for (final RequiredPrereq prereq : prereqList) {
                 if (!isPrereqMet(prereq, this.semester2Courses, prior, this.semester2CourseGroups,
-                        this.semester1CourseGroups,
-                        false)) {
-                    final String courseToAdd = prereq.prereqCourses.get(0);
+                        this.semester1CourseGroups, false)) {
+                    final String courseToAdd = prereq.prereqCourses.getFirst();
                     final RawCourse crs = courseData.get(courseToAdd);
 
                     if (crs != null) {
                         final CourseInfo info = new CourseInfo(crs, true);
-                        info.requiredGrade = prereq.prereqGrades.isEmpty() ? null : prereq.prereqGrades.get(0);
+                        info.requiredGrade = prereq.prereqGrades.isEmpty() ? null : prereq.prereqGrades.getFirst();
                         info.status = isAlreadySatisfied(info, data);
 
                         if (Boolean.TRUE.equals(prereq.mayBeConcurrent)) {
@@ -747,12 +726,12 @@ public final class CourseSequence {
             for (final RequiredPrereq prereq : prereqList) {
                 if (!isPrereqMet(prereq, this.additionalCourses, prior, this.additionalCourseGroups, priorGroups,
                         true)) {
-                    final String courseToAdd = prereq.prereqCourses.get(0);
+                    final String courseToAdd = prereq.prereqCourses.getFirst();
                     final RawCourse crs = courseData.get(courseToAdd);
 
                     if (crs != null) {
                         final CourseInfo info = new CourseInfo(crs, true);
-                        info.requiredGrade = prereq.prereqGrades.isEmpty() ? null : prereq.prereqGrades.get(0);
+                        info.requiredGrade = prereq.prereqGrades.isEmpty() ? null : prereq.prereqGrades.getFirst();
                         info.status = isAlreadySatisfied(info, data);
 
                         this.additionalCourses.put(courseToAdd, info);
@@ -787,23 +766,26 @@ public final class CourseSequence {
         // Now course groups (only multi-course groups remain)...
         for (final CourseInfoGroup group : this.semester1CourseGroups) {
 
+            final List<String> courseNumbers = group.getCourseNumbers();
             if (group.getNumCredits() == null) {
                 // "Pick one course from this list" - see if any course has prereqs satisfied
-                final boolean unsatisfied = !isPickOneGroupPrereqMet(group, prereqData, current, prior, currentGroups, null,
+                final boolean unsatisfied = !isPickOneGroupPrereqMet(group, prereqData, current, prior, currentGroups
+                        , null,
                         false);
 
                 if (unsatisfied) {
                     // Add the prerequisites for the first course
-                    for (final RequiredPrereq prereq : prereqData.get(group.getCourseNumbers().get(0))) {
+                    for (final RequiredPrereq prereq : prereqData.get(courseNumbers.getFirst())) {
 
                         if (!isPrereqMet(prereq, current, prior, this.semester1CourseGroups, null, false)) {
                             // Add the prerequisite course and check its prerequisites
-                            final String courseToAdd = prereq.prereqCourses.get(0);
+                            final String courseToAdd = prereq.prereqCourses.getFirst();
                             final RawCourse crs = courseData.get(courseToAdd);
 
                             if (crs != null) {
                                 final CourseInfo info = new CourseInfo(crs, true);
-                                info.requiredGrade = prereq.prereqGrades.isEmpty() ? null : prereq.prereqGrades.get(0);
+                                info.requiredGrade = prereq.prereqGrades.isEmpty() ? null :
+                                        prereq.prereqGrades.getFirst();
                                 info.status = isAlreadySatisfied(info, data);
 
                                 if (Boolean.TRUE.equals(prereq.mayBeConcurrent)) {
@@ -827,7 +809,7 @@ public final class CourseSequence {
                         found, false) == 0) {
 
                     // Add the prerequisite for the first course in the group with course data
-                    for (final String course : group.getCourseNumbers()) {
+                    for (final String course : courseNumbers) {
                         final RawCourse cdata = courseData.get(course);
                         if (cdata == null) {
                             continue;
@@ -839,13 +821,13 @@ public final class CourseSequence {
                             for (final RequiredPrereq prereq : prereqList) {
                                 if (!isPrereqMet(prereq, current, prior, currentGroups, null, false)) {
                                     // Add the prerequisite course and check its prerequisites
-                                    final String courseToAdd = prereq.prereqCourses.get(0);
+                                    final String courseToAdd = prereq.prereqCourses.getFirst();
                                     final RawCourse crs = courseData.get(courseToAdd);
 
                                     if (crs != null) {
                                         final CourseInfo info = new CourseInfo(crs, true);
                                         info.requiredGrade = prereq.prereqGrades.isEmpty() ? null
-                                                : prereq.prereqGrades.get(0);
+                                                : prereq.prereqGrades.getFirst();
                                         info.status = isAlreadySatisfied(info, data);
 
                                         if (Boolean.TRUE.equals(prereq.mayBeConcurrent)) {
@@ -895,6 +877,7 @@ public final class CourseSequence {
         // Now course groups (only multi-course groups remain)...
         for (final CourseInfoGroup group : this.semester2CourseGroups) {
 
+            final List<String> courseNumbers = group.getCourseNumbers();
             if (group.getNumCredits() == null) {
                 // "Pick one course from this list" - see if any course has prereqs satisfied
                 final boolean unsatisfied = !isPickOneGroupPrereqMet(group, prereqData, current, prior, currentGroups,
@@ -902,11 +885,11 @@ public final class CourseSequence {
 
                 if (unsatisfied) {
                     // Add the prerequisites for the first course
-                    for (final RequiredPrereq prereq : prereqData.get(group.getCourseNumbers().get(0))) {
+                    for (final RequiredPrereq prereq : prereqData.get(courseNumbers.getFirst())) {
 
                         if (!isPrereqMet(prereq, current, prior, currentGroups, priorGroups, false)) {
                             // Add the prerequisite course and check its prerequisites
-                            final String courseToAdd = prereq.prereqCourses.get(0);
+                            final String courseToAdd = prereq.prereqCourses.getFirst();
                             final RawCourse crs = courseData.get(courseToAdd);
 
                             if (crs != null) {
@@ -936,7 +919,7 @@ public final class CourseSequence {
                         currentGroups, priorGroups, found, false) == 0) {
 
                     // Add the prerequisite for the first course in the group with course data
-                    for (final String course : group.getCourseNumbers()) {
+                    for (final String course : courseNumbers) {
                         final RawCourse cdata = courseData.get(course);
                         if (cdata == null) {
                             continue;
@@ -948,13 +931,13 @@ public final class CourseSequence {
                             for (final RequiredPrereq prereq : prereqList) {
                                 if (!isPrereqMet(prereq, current, prior, currentGroups, priorGroups, false)) {
                                     // Add the prerequisite course and check its prerequisites
-                                    final String courseToAdd = prereq.prereqCourses.get(0);
+                                    final String courseToAdd = prereq.prereqCourses.getFirst();
                                     final RawCourse crs = courseData.get(courseToAdd);
 
                                     if (crs != null) {
                                         final CourseInfo info = new CourseInfo(crs, true);
                                         info.requiredGrade = prereq.prereqGrades.isEmpty() ? null
-                                                : prereq.prereqGrades.get(0);
+                                                : prereq.prereqGrades.getFirst();
                                         info.status = isAlreadySatisfied(info, data);
 
                                         if (Boolean.TRUE.equals(prereq.mayBeConcurrent)) {
@@ -986,8 +969,7 @@ public final class CourseSequence {
      * @param data       the student data with past word on record
      */
     private void checkAdditionalPrerequisites(final Map<String, ? extends List<RequiredPrereq>> prereqData,
-                                              final Map<String, RawCourse> courseData,
-                                              final StudentData data) {
+                                              final Map<String, RawCourse> courseData, final StudentData data) {
 
         final Map<String, CourseInfo> current = new HashMap<>(this.additionalCourses);
         final Map<String, CourseInfo> prior = new HashMap<>(this.semester2Courses);
@@ -1006,6 +988,7 @@ public final class CourseSequence {
         // Now course groups (only multi-course groups remain)...
         for (final CourseInfoGroup group : this.additionalCourseGroups) {
 
+            final List<String> courseNumbers = group.getCourseNumbers();
             if (group.getNumCredits() == null) {
                 // "Pick one course from this list" - see if any course has prereqs satisfied
                 final boolean unsatisfied = !isPickOneGroupPrereqMet(group, prereqData, current, prior, currentGroups,
@@ -1013,17 +996,18 @@ public final class CourseSequence {
 
                 if (unsatisfied) {
                     // Add the prerequisites for the first course
-                    for (final RequiredPrereq prereq : prereqData.get(group.getCourseNumbers().get(0))) {
+                    final String first = courseNumbers.getFirst();
+                    for (final RequiredPrereq prereq : prereqData.get(first)) {
 
                         if (!isPrereqMet(prereq, current, prior, currentGroups, priorGroups, true)) {
                             // Add the prerequisite course and check its prerequisites
-                            final String courseToAdd = prereq.prereqCourses.get(0);
+                            final String courseToAdd = prereq.prereqCourses.getFirst();
                             final RawCourse crs = courseData.get(courseToAdd);
 
                             if (crs != null) {
                                 final CourseInfo info = new CourseInfo(crs, true);
                                 info.requiredGrade = prereq.prereqGrades.isEmpty() ? null
-                                        : prereq.prereqGrades.get(0);
+                                        : prereq.prereqGrades.getFirst();
                                 info.status = isAlreadySatisfied(info, data);
 
                                 this.additionalCourses.put(courseToAdd, info);
@@ -1042,7 +1026,7 @@ public final class CourseSequence {
                         currentGroups, priorGroups, found, true) == 0) {
 
                     // Add the prerequisite for the first course in the group with course data
-                    for (final String course : group.getCourseNumbers()) {
+                    for (final String course : courseNumbers) {
                         final RawCourse cdata = courseData.get(course);
                         if (cdata == null) {
                             continue;
@@ -1327,7 +1311,7 @@ public final class CourseSequence {
      *
      * @param courseData a map from course ID to course data
      */
-    public void simplifyGroups(final Map<String, RawCourse> courseData) {
+    void simplifyGroups(final Map<String, RawCourse> courseData) {
 
         for (final CourseInfoGroup group : this.semester1CourseGroups) {
             if (group.getNumCredits() == null) {
@@ -1413,7 +1397,7 @@ public final class CourseSequence {
      *
      * @param numCredits the number of core courses to be included in semester 1
      */
-    public void ensureCoreSem1(final int numCredits) {
+    void ensureCoreSem1(final int numCredits) {
 
         final int numCoreInSem1 = countCore(this.semester1Courses, this.semester1CourseGroups);
 
@@ -1483,7 +1467,7 @@ public final class CourseSequence {
      *
      * @param numCredits the number of core courses to be included in semester 1 and 2
      */
-    public void ensureCoreSem12(final int numCredits) {
+    void ensureCoreSem12(final int numCredits) {
 
         final int numCoreInSem12 = countCore(this.semester1Courses, this.semester1CourseGroups)
                 + countCore(this.semester2Courses, this.semester2CourseGroups);
@@ -1635,7 +1619,8 @@ public final class CourseSequence {
 
         if (!req) {
             for (final CourseInfoGroup grp : this.semester1CourseGroups) {
-                if ("AGED3".equals(grp.getGroupCode()) || "ANIM3".equals(grp.getGroupCode())) {
+                final String code = grp.getGroupCode();
+                if ("AGED3".equals(code) || "ANIM3".equals(code)) {
                     req = true;
                     break;
                 }
@@ -1650,7 +1635,7 @@ public final class CourseSequence {
      *
      * @return {@code true} if there are semester 2 courses that the student could place out of
      */
-    public boolean isPrecalcCourseInSemester2() {
+    boolean isPrecalcCourseInSemester2() {
 
         boolean req = this.semester2Courses.containsKey(RawRecordConstants.M117)
                 || this.semester2Courses.containsKey(RawRecordConstants.M118)
@@ -1660,7 +1645,8 @@ public final class CourseSequence {
 
         if (!req) {
             for (final CourseInfoGroup grp : this.semester2CourseGroups) {
-                if ("AGED3".equals(grp.getGroupCode()) || "ANIM3".equals(grp.getGroupCode())) {
+                final String code = grp.getGroupCode();
+                if ("AGED3".equals(code) || "ANIM3".equals(code)) {
                     req = true;
                     break;
                 }
@@ -1675,7 +1661,7 @@ public final class CourseSequence {
      *
      * @return {@code true} if MATH 101 is needed in semester 1.
      */
-    public boolean needs101InSem1() {
+    boolean needs101InSem1() {
 
         return isCourseInSemester1("M 101") || isGroupInSemester1("AUCC3") || isGroupInSemester1("AUCC2");
     }
@@ -1685,14 +1671,16 @@ public final class CourseSequence {
      *
      * @return {@code true} if MATH 117 is needed in semester 1.
      */
-    public boolean needs117InSem1() {
+    boolean needs117InSem1() {
 
         final boolean needs117;
 
         if (isGroupInSemester1("AUCC2") || isGroupInSemester1("AUCC3")) {
             needs117 = false;
-        } else needs117 = isCourseInSemester1(RawRecordConstants.M117) || isGroupInSemester1("AGED3")
-                || isGroupInSemester1("ANIM3");
+        } else {
+            needs117 = isCourseInSemester1(RawRecordConstants.M117) || isGroupInSemester1("AGED3")
+                    || isGroupInSemester1("ANIM3");
+        }
 
         return needs117;
     }
@@ -1706,29 +1694,6 @@ public final class CourseSequence {
 
         return isCourseInSemester2("M 101") || isGroupInSemester2("AUCC3") || isGroupInSemester2("AUCC2");
     }
-
-    ///**
-    // * Tests whether MATH 117 is needed in semester 2.
-    // *
-    // * @return {@code true} if MATH 117 is needed in semester 2.
-    // */
-    // public boolean needs117InSem2() {
-    //
-    // return isCourseInSemester2(RawRecordConstants.M117)
-    // || isGroupInSemester2("AGED3")
-    // || isGroupInSemester2("ANIM3");
-    // }
-
-    ///**
-    // * Tests whether a specific course is in semester 1.
-    // *
-    // * @param course the course ID
-    // * @return {@code true} if the course is listed in semester 1 (courses, not groups)
-    // */
-    // public boolean isCourseInPrearrival(final String course) {
-    //
-    // return this.preArrivalCourses.containsKey(course);
-    // }
 
     /**
      * Tests whether a specific course is in semester 1.
@@ -1747,12 +1712,13 @@ public final class CourseSequence {
      * @param group the group code
      * @return {@code true} if the group is listed in semester 1
      */
-    public boolean isGroupInSemester1(final String group) {
+    boolean isGroupInSemester1(final String group) {
 
         boolean found = false;
 
         for (final CourseInfoGroup g : this.semester1CourseGroups) {
-            if (group.equals(g.getGroupCode())) {
+            final String code = g.getGroupCode();
+            if (group.equals(code)) {
                 found = true;
                 break;
             }
@@ -1783,7 +1749,8 @@ public final class CourseSequence {
         boolean found = false;
 
         for (final CourseInfoGroup g : this.semester2CourseGroups) {
-            if (group.equals(g.getGroupCode())) {
+            final String code = g.getGroupCode();
+            if (group.equals(code)) {
                 found = true;
                 break;
             }
@@ -1799,7 +1766,7 @@ public final class CourseSequence {
      * @return {@code true} if the student can register for at least one first-semester course; {@code false} if there
      *         are no first-semester courses, or the student is not eligible for any of them
      */
-    public boolean isEligibleToRegisterForSemester1(final Collection<String> canRegisterFor) {
+    boolean isEligibleToRegisterForSemester1(final Collection<String> canRegisterFor) {
 
         boolean eligible = false;
 
